# sonar-jira-sync

./: .gitignore  README.md  config.example.yaml  pyproject.toml
src/sonar_jira_sync/: __init__.py  cli.py
src/sonar_jira_sync/core/: __init__.py  config.py  distributor.py  jira_client.py  sonar_client.py
src/sonar_jira_sync/mcp/: __init__.py  server.py
src/sonar_jira_sync/web/: __init__.py  app.py
src/sonar_jira_sync/web/templates/: index.html
